@@ -475,6 +475,8 @@ C-API
 Library
 -------
 
+- Issue #9354: Provide getsockopt() in asyncore's file_wrapper.
+
 - Issue #8966: ctypes: Remove implicit bytes-unicode conversion.
 
 - Issue #9378: python -m pickle <pickle file> will now load and
